# tvbingefriend-recommendation-service

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.pipeline  README.md  function_app.py  local.settings.json.example  pyproject.toml  pytest.ini
.github/workflows/: README.md  deploy.yml
alembic/: env.py
alembic/versions/: 213c78f7baa1_initial_schema.py
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_content_similarity.ipynb
scripts/: compute_features.py  compute_similarities.py  download_from_blob.py  fetch_and_prepare_data.py  populate_database.py  populate_recommendations.py  run_pipeline.py  upload_to_blob.py
terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/container-monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/logic-app-scheduler/: main.tf  outputs.tf  variables.tf  workflow-template.json
terraform/modules/recommendation-api/: main.tf  outputs.tf  variables.tf
terraform/modules/recommendation-pipeline/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_config.py  test_models.py
tests/test_blueprints/: test_recommendations_bp.py
tests/test_ml/: test_feature_extractor.py  test_similarity_computer.py  test_text_processor.py
tests/test_models/: test_base.py  test_database.py  test_show_metadata.py  test_show_similarity.py
tests/test_repos/: test_metadata_repository.py  test_similarity_repository.py
tests/test_scripts/: test_compute_features.py  test_compute_similarities.py  test_download_from_blob.py  test_fetch_and_prepare_data.py  test_populate_database.py  test_populate_recommendations.py  test_upload_to_blob.py
tests/test_services/: test_content_based_service.py  test_data_loader_service.py
tests/test_storage/: test_blob_storage.py
tvbingefriend_recommendation_service/: config.py
tvbingefriend_recommendation_service/blueprints/: __init__.py  recommendations_bp.py
tvbingefriend_recommendation_service/future/: __init__.py
tvbingefriend_recommendation_service/ml/: feature_extractor.py  similarity_computer.py  text_processor.py
tvbingefriend_recommendation_service/models/: __init__.py  base.py  database.py  show_metdata.py  show_similarity.py
tvbingefriend_recommendation_service/repos/: __init__.py  metadata_repository.py  similarity_repository.py
tvbingefriend_recommendation_service/services/: __init__.py  content_based_service.py  data_loader_service.py
tvbingefriend_recommendation_service/storage/: __init__.py  blob_storage.py
