[tool.poetry]
name = "tvbingefriend-recommendation-service"
version = "0.1.0"
description = "Hybrid TV show recommendation system"
authors = ["Tom Boone <tom@tomboone.com>"]

[tool.poetry.dependencies]
python = "^3.12"
azure-functions = "^1.18.0"
pandas = "^2.2.0"
numpy = "^2.3.3"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
mlflow = "^3.4.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.43"
pandas-stubs = "^2.3.2.250926"
alembic = "^1.16.5"
pymysql = "^1.1.2"
tvbingefriend-azure-storage-service = "^0.1.3"
types-requests = "^2.32.4.20250913"
scipy-stubs = "^1.16.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
requests-mock = "^1.12.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.18.2"
bandit = "^1.8.6"
pre-commit = "^4.3.0"

[[tool.poetry.source]]
name = "TBC_Feed"
url = "https://pkgs.dev.azure.com/tomboonedotcom/BingeFriend/_packaging/TBC_Feed/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"